--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 <IfModule mod_rewrite.c>
    RewriteEngine On
-   RewriteBase /sosoares/
+   RewriteBase /GitHub/sosoares_site/
    RewriteRule ^(.*)/index/?$ $1 [L,R=301]
    RewriteCond %{REQUEST_FILENAME} !-f
    RewriteCond %{REQUEST_FILENAME} !-d
